--- a/index.html
+++ b/index.html
@@ -3,65 +3,68 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sortscape</title>
-
-    <!-- Import map for modules -->
-    <script type="importmap">
-      {
-        "imports": {
-          "three": "./node_modules/three/build/three.module.js",
-          "three/examples/jsm/controls/OrbitControls": "./node_modules/three/examples/jsm/controls/OrbitControls.js",
-          "lil-gui": "./node_modules/lil-gui/dist/lil-gui.esm.js"
-        }
-      }
-    </script>
-
+    <title>SortScape</title>
     <style>
       body {
         margin: 0;
-        overflow: hidden;
-        background-color: #000000;
+        padding: 0;
+        background-color: #000;
+        color: #fff;
         font-family: Arial, sans-serif;
-      }
-      #gui-container {
-        position: absolute;
-        top: 10px;
-        left: 10px;
-        z-index: 10;
-        background-color: rgba(0, 0, 0, 0.8);
-        color: white;
-        padding: 10px;
-        border-radius: 8px;
-        box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.5);
-      }
-      #info-box {
-        position: absolute;
-        top: 355px;
-        left: 10px;
-        z-index: 10;
-        background-color: rgba(0, 0, 0, 0.8);
-        color: white;
-        padding: 10px;
-        border-radius: 8px;
-        box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.5);
-        width: 245px;
-        white-space: pre-wrap;
-        font-size: 0.85em;
-      }
-      #render-area {
-        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
         height: 100vh;
-        display: block;
+      }
+      .container {
+        text-align: center;
+        max-width: 600px;
+        padding: 20px;
+      }
+      .logo {
+        max-width: 200px;
+        width: 100%;
+        height: auto;
+      }
+      h1 {
+        margin: 20px 0 10px;
+      }
+      p {
+        margin: 10px 0;
+      }
+      button {
+        background-color: #008cba;
+        border: none;
+        color: #fff;
+        padding: 15px 30px;
+        font-size: 16px;
+        border-radius: 8px;
+        cursor: pointer;
+        margin-top: 20px;
+      }
+      button:hover {
+        background-color: #006f96;
       }
     </style>
+    <link rel="icon" href="assets/favicon-logo.jpeg" type="image/jpeg" />
   </head>
-
   <body>
-    <div id="render-area"></div>
-    <div id="gui-container"></div>
-    <div id="info-box"></div>
-
-    <!-- Main script in TypeScript (compiled or used with a TS loader) -->
-    <script type="module" src="./dist/index.js"></script>
+    <div class="container">
+      <!-- Logo Image -->
+      <img class="logo" src="assets/favicon-logo.jpeg" alt="Site Logo" />
+      <!-- Site Title and Instructions -->
+      <h1>Welcome to SortScape</h1>
+      <p>
+        Explore a dynamic 3D visualization of popular sorting algorithms. Watch
+        as arrays of numbers transform into interactive bars and learn how
+        different algorithms perform in real time.
+      </p>
+      <p>
+        Click the button below to begin and dive into the world of algorithm
+        visualization.
+      </p>
+      <!-- Button leading to the main html page -->
+      <button onclick="location.href='main.html'">Start Visualization</button>
+    </div>
   </body>
 </html>
