using vite for build tool

--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
         background-color: #006f96;
       }
     </style>
-    <link rel="icon" href="assets/favicon-logo.jpeg" type="image/jpeg" />
+    <link rel="icon" href="public/favicon-logo.jpeg" type="image/jpeg" />
   </head>
   <body>
     <div class="container">
       <!-- Logo Image -->
-      <img class="logo" src="assets/favicon-logo.jpeg" alt="Site Logo" />
+      <img class="logo" src="public/favicon-logo.jpeg" alt="Site Logo" />
       <!-- Site Title and Instructions -->
       <h1>Welcome to SortScape</h1>
       <p>
@@ -66,5 +66,6 @@
       <!-- Button leading to the main html page -->
       <button onclick="location.href='main.html'">Start Visualization</button>
     </div>
+    <script type="module" src="/src/index.ts"></script>
   </body>
 </html>
