--- a/index.html
+++ b/index.html
@@ -53,15 +53,12 @@
       <!-- Logo Image -->
       <img class="logo" src="public/favicon-logo.jpeg" alt="Site Logo" />
       <!-- Site Title and Instructions -->
-      <h1>Welcome to SortScape</h1>
+      <h1>welcome to sortscape</h1>
       <p>
-        Explore a dynamic 3D visualization of popular sorting algorithms. Watch
+        explore a dynamic 3D visualization of popular sorting algorithms. watch
         as arrays of numbers transform into interactive bars and learn how
-        different algorithms perform in real time.
-      </p>
-      <p>
-        Click the button below to begin and dive into the world of algorithm
-        visualization.
+        different algorithms perform in real time. click the button below to
+        begin and dive into the world of algorithm visualization.
       </p>
       <!-- Button leading to the main html page -->
       <button onclick="location.href='main.html'">Start Visualization</button>
