--- a/main.html
+++ b/main.html
@@ -71,8 +71,8 @@
   <body>
     <!-- Header displayed in the top-right corner -->
     <div id="site-header">
-      <img src="public/favicon-logo.jpeg" alt="SortScape Logo" />
-      <span>SortScape</span>
+      <img src="public/favicon-logo.jpeg" alt="sortscape logo" />
+      <span>sortscape</span>
     </div>
 
     <!-- Main content areas -->
