--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>sortscape</title>
+    <title>Sortscape</title>
     <style>
       body {
         margin: 0;
@@ -53,12 +53,11 @@
       <!-- Logo Image -->
       <img class="logo" src="public/favicon-logo.jpeg" alt="Site Logo" />
       <!-- Site Title and Instructions -->
-      <h1>welcome to sortscape</h1>
+      <h1>Welcome to Sortscape!</h1>
       <p>
-        explore a dynamic 3D visualization of popular sorting algorithms. watch
-        as arrays of numbers transform into interactive bars and learn how
-        different algorithms perform in real time. click the button below to
-        begin and dive into the world of algorithm visualization.
+        On the next page you'll be able to control animations of different
+        sorting algorithms and their associated complexity info + pseudocode. I
+        hope it's of some educational use to you!
       </p>
       <!-- Button leading to the main html page -->
       <button onclick="location.href='main.html'">Start Visualization</button>
