--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SortScape</title>
+    <title>Sortscape</title>
     <style>
       body {
         margin: 0;
@@ -55,8 +55,8 @@
         border-radius: 5px;
       }
       #site-header img {
-        width: 40px;
-        height: 40px;
+        width: 80px;
+        height: 80px;
         object-fit: contain;
       }
       #site-header span {
@@ -72,7 +72,6 @@
     <!-- Header displayed in the top-right corner -->
     <div id="site-header">
       <img src="public/favicon-logo.jpeg" alt="sortscape logo" />
-      <span>sortscape</span>
     </div>
 
     <!-- Main content areas -->
